fixed white space in movie container

--- a/src/App.css
+++ b/src/App.css
@@ -5,4 +5,5 @@
 
 .App {
   background-image: linear-gradient(to right, #051421, #042727);
+  min-height: 100vh;
 }
